Updated by task 'AUTO_TM_MT_1748912653441' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics.en/commit/4cf7f9c3ba410453a482f78094093f1b79fc4f40

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -3,10 +3,10 @@ title: Ver las notas de la versión de Adobe Analytics de 2020
 description: Notas de la versión de Analytics de 2020
 feature: Release Notes
 exl-id: 4a0bb2f4-23dd-4772-80fb-5cffbc80c26b
-source-git-commit: 815e50e30fa6a0bce1bf78f33843070f96f52de8
-workflow-type: ht
-source-wordcount: '12333'
-ht-degree: 100%
+source-git-commit: 6bedfb9b1333a442bf17cf71dad1e0883b97fd45
+workflow-type: tm+mt
+source-wordcount: '12337'
+ht-degree: 99%
 
 ---
 
@@ -314,7 +314,7 @@ AN-218269; AN-218455; AN-218492; AN-219888; AN-220447; AN-220546; AN-220788; AN-
 * Se ha corregido un problema con los datos que aparecían en los informes pero no aparecían en la [!UICONTROL fuente de datos]. (AN-211923)
 * Se ha corregido un problema que impedía copiar permisos de [!UICONTROL Perfil de producto]. (AN-211113)
 * Se ha corregido un problema en el cual los usuarios con Federated ID no podían iniciar sesión en [!UICONTROL Report Builder]. (AN-207750)
-* Se ha corregido un problema con los datos de [!UICONTROL AdWords] que no se mostraban en [!UICONTROL Advertising Analytics]. (AN-213249)
+* Se ha corregido un problema con los datos de Google Ads que no se mostraban en [!UICONTROL Advertising Analytics]. (AN-213249)
 * Se ha corregido un problema en el que los datos de clasificación no se mostraban en la vista de tendencias. (AN-212761)
 * Se ha corregido un problema que provocaba un recuento incorrecto de segmentos publicados en el [!UICONTROL Administrador de segmentos]. (AN-213374)
 * Se ha corregido un problema con **[!UICONTROL Mostrar tendencia ascendente como...]** en el [!UICONTROL Editor de métricas calculadas]: no funcionaba al aplicar filtros. (AN-214223)
@@ -330,9 +330,9 @@ AN-218269; AN-218455; AN-218492; AN-219888; AN-220447; AN-220546; AN-220788; AN-
 * Se ha corregido un problema que impedía a los usuarios cambiar el [!UICONTROL modelo de atribución] en las métricas de fila estáticas. (AN-207872)
 * Se ha corregido un problema por el que el creador de [!UICONTROL informes programados] se quedaba en cola. (AN-215317)
 * Se ha corregido el conector [!UICONTROL de datos de ExactTarget]. (AN-210794)
-* Se han corregido problemas de latencia en la [!UICONTROL API de ingestión masiva]. (AN-210165)
+* Se han corregido problemas de latencia en la [!UICONTROL API de ingesta masiva]. (AN-210165)
 * Se ha corregido un problema que impedía a los usuarios iniciar sesión en el [!UICONTROL Report Builder] con un Federated ID. (AN-207750)
-* Se ha corregido un problema en [!UICONTROL Advertising Analytics] que impedía que se mostraran los datos de [!DNL Google AdWords]. (AN-213249)
+* Se ha corregido un problema en [!UICONTROL Advertising Analytics] que impedía que se mostraran los datos de Google Ads. (AN-213249)
 * Se ha corregido un problema que impedía que se mostraran eventos de [!UICONTROL Espacio de trabajo] [!UICONTROL Project Viewed] en los registros. (AN-214134)
 * Se ha corregido un problema que se producía al cambiar el intervalo de fechas en [!UICONTROL Espacio de trabajo] y al seleccionar **[!UICONTROL Aplicar a todos los paneles]**. La fecha no cambió en algunos paneles. (AN-214944)
 * Se ha corregido un problema que impedía crear o editar alertas. (AN-215920)
@@ -379,7 +379,7 @@ Consulte [Notas de la versión de AppMeasurement para JavaScript](https://experi
 * Se ha corregido un problema con los datos que aparecían en los informes pero no aparecían en la [!UICONTROL fuente de datos]. (AN-211923)
 * Se ha corregido un problema que impedía copiar permisos de [!UICONTROL Perfil de producto]. (AN-211113)
 * Se ha corregido un problema en el cual los usuarios con Federated ID no podían iniciar sesión en Report Builder. (AN-207750)
-* Se ha corregido un problema con los datos de [!UICONTROL AdWords] que no se mostraban en [!UICONTROL Advertising Analytics]. (AN-213249)
+* Se ha corregido un problema con los datos de Google Ads que no se mostraban en [!UICONTROL Advertising Analytics]. (AN-213249)
 * Se ha corregido un problema en el que los datos de clasificación no se mostraban en la vista de tendencias. (AN-212761)
 * Se ha corregido un problema que provocaba un recuento incorrecto de segmentos publicados en el [!UICONTROL Administrador de segmentos]. (AN-213374)
 
